--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="..\Clowns%27 F8\MemLeaks.h" />
     <ClInclude Include="..\Clowns%27 F8\Module.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleAudio.h" />
+    <ClInclude Include="..\Clowns%27 F8\ModuleFadeToBlack.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleInput.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleRender.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleTextures.h" />
@@ -138,6 +139,7 @@
     <ClCompile Include="..\Clowns%27 F8\Globals.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Main.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleAudio.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\ModuleFadeToBlack.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleInput.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleRender.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleTextures.cpp" />
