--- a/Clowns' F8/Clowns' F8.vcxproj.filters
+++ b/Clowns' F8/Clowns' F8.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="Scenes">
       <UniqueIdentifier>{f47f629b-00eb-4cdf-94b4-a6b27b055ae2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Containers\pugiXML">
+      <UniqueIdentifier>{559b039e-8b6c-4f07-be53-2b53d9338ab6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Clowns%27 F8\Application.h">
@@ -45,9 +48,6 @@
     <ClInclude Include="..\Clowns%27 F8\ModuleAudio.h">
       <Filter>Modules</Filter>
     </ClInclude>
-    <ClInclude Include="..\Clowns%27 F8\Globals.h">
-      <Filter>Core</Filter>
-    </ClInclude>
     <ClInclude Include="..\Clowns%27 F8\MemLeaks.h">
       <Filter>Core</Filter>
     </ClInclude>
@@ -65,6 +65,18 @@
     </ClInclude>
     <ClInclude Include="..\Clowns%27 F8\ModuleMap.h">
       <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Clowns%27 F8\Timer.h">
+      <Filter>Containers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Clowns%27 F8\pugixml.hpp">
+      <Filter>Containers\pugiXML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Clowns%27 F8\pugiconfig.hpp">
+      <Filter>Containers\pugiXML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Clowns%27 F8\PerfTimer.h">
+      <Filter>Containers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -86,9 +98,6 @@
     <ClCompile Include="..\Clowns%27 F8\ModuleAudio.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
-    <ClCompile Include="..\Clowns%27 F8\Globals.cpp">
-      <Filter>Core</Filter>
-    </ClCompile>
     <ClCompile Include="..\Clowns%27 F8\Main.cpp">
       <Filter>Core</Filter>
     </ClCompile>
@@ -103,6 +112,15 @@
     </ClCompile>
     <ClCompile Include="..\Clowns%27 F8\ModuleMap.cpp">
       <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Clowns%27 F8\Timer.cpp">
+      <Filter>Containers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Clowns%27 F8\pugixml.cpp">
+      <Filter>Containers\pugiXML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Clowns%27 F8\PerfTimer.cpp">
+      <Filter>Containers</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
