--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -125,9 +125,12 @@
     <ClInclude Include="..\Clowns%27 F8\Animation.h" />
     <ClInclude Include="..\Clowns%27 F8\Application.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleMap.h" />
+    <ClInclude Include="..\Clowns%27 F8\PerfTimer.h" />
+    <ClInclude Include="..\Clowns%27 F8\pugiconfig.hpp" />
+    <ClInclude Include="..\Clowns%27 F8\pugixml.hpp" />
     <ClInclude Include="..\Clowns%27 F8\Scene.h" />
+    <ClInclude Include="..\Clowns%27 F8\Timer.h" />
     <ClInclude Include="ModuleFonts.h" />
-    <ClInclude Include="..\Clowns%27 F8\Globals.h" />
     <ClInclude Include="..\Clowns%27 F8\MemLeaks.h" />
     <ClInclude Include="..\Clowns%27 F8\Module.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleAudio.h" />
@@ -140,9 +143,11 @@
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleMap.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\PerfTimer.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\pugixml.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Scene.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Timer.cpp" />
     <ClCompile Include="ModuleFonts.cpp" />
-    <ClCompile Include="..\Clowns%27 F8\Globals.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Main.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleAudio.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleFadeToBlack.cpp" />
