--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -129,6 +129,11 @@
     <ClInclude Include="..\Clowns%27 F8\PerfTimer.h" />
     <ClInclude Include="..\Clowns%27 F8\Scene.h" />
     <ClInclude Include="..\Clowns%27 F8\Timer.h" />
+    <ClInclude Include="GUIButton.h" />
+    <ClInclude Include="GUIElement.h" />
+    <ClInclude Include="GUIImage.h" />
+    <ClInclude Include="GUILabel.h" />
+    <ClInclude Include="GUIManager.h" />
     <ClInclude Include="ModuleFonts.h" />
     <ClInclude Include="..\Clowns%27 F8\MemLeaks.h" />
     <ClInclude Include="..\Clowns%27 F8\Module.h" />
@@ -146,6 +151,11 @@
     <ClCompile Include="..\Clowns%27 F8\PerfTimer.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Scene.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Timer.cpp" />
+    <ClCompile Include="GUIButton.cpp" />
+    <ClCompile Include="GUIElement.cpp" />
+    <ClCompile Include="GUIImage.cpp" />
+    <ClCompile Include="GUILabel.cpp" />
+    <ClCompile Include="GUIManager.cpp" />
     <ClCompile Include="ModuleFonts.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Main.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleAudio.cpp" />
