--- a/Clowns' F8/Clowns' F8.vcxproj.filters
+++ b/Clowns' F8/Clowns' F8.vcxproj.filters
@@ -87,7 +87,7 @@
     <ClInclude Include="GUILabel.h">
       <Filter>GUIElements</Filter>
     </ClInclude>
-    <ClInclude Include="GUIManager.h">
+    <ClInclude Include="ModuleGUIManager.h">
       <Filter>Modules</Filter>
     </ClInclude>
   </ItemGroup>
@@ -146,7 +146,7 @@
     <ClCompile Include="GUILabel.cpp">
       <Filter>GUIElements</Filter>
     </ClCompile>
-    <ClCompile Include="GUIManager.cpp">
+    <ClCompile Include="ModuleGUIManager.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
   </ItemGroup>
