ejecutable and stable core code with STL

--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -125,6 +125,7 @@
     <ClInclude Include="..\Clowns%27 F8\Animation.h" />
     <ClInclude Include="..\Clowns%27 F8\Application.h" />
     <ClInclude Include="..\Clowns%27 F8\Defs.h" />
+    <ClInclude Include="..\Clowns%27 F8\Log.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleEntityManager.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleMap.h" />
     <ClInclude Include="..\Clowns%27 F8\PerfTimer.h" />
@@ -149,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Log.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleEntityManager.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleMap.cpp" />
     <ClCompile Include="..\Clowns%27 F8\PerfTimer.cpp" />
