module entity done

--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -129,6 +129,7 @@
     <ClInclude Include="..\Clowns%27 F8\Animation.h" />
     <ClInclude Include="..\Clowns%27 F8\Application.h" />
     <ClInclude Include="..\Clowns%27 F8\Defs.h" />
+    <ClInclude Include="..\Clowns%27 F8\Entity.h" />
     <ClInclude Include="..\Clowns%27 F8\Log.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleEntityManager.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleMap.h" />
@@ -154,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Entity.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Log.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleEntityManager.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleMap.cpp" />
