--- a/Clowns' F8/Clowns' F8.vcxproj.filters
+++ b/Clowns' F8/Clowns' F8.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClInclude Include="..\Clowns%27 F8\Entity.h">
       <Filter>Entities</Filter>
     </ClInclude>
+    <ClInclude Include="..\Clowns%27 F8\Enemy.h">
+      <Filter>Entities\EntitiesEnemies</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp">
