preparing bulldog class

--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClInclude Include="..\Clowns%27 F8\Animation.h" />
     <ClInclude Include="..\Clowns%27 F8\Application.h" />
+    <ClInclude Include="..\Clowns%27 F8\Bulldog.h" />
     <ClInclude Include="..\Clowns%27 F8\Defs.h" />
     <ClInclude Include="..\Clowns%27 F8\Enemy.h" />
     <ClInclude Include="..\Clowns%27 F8\Entity.h" />
@@ -156,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Bulldog.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Entity.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Log.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleEntityManager.cpp" />
