--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="..\Clowns%27 F8\Application.h" />
     <ClInclude Include="..\Clowns%27 F8\Bulldog.h" />
     <ClInclude Include="..\Clowns%27 F8\Character.h" />
+    <ClInclude Include="..\Clowns%27 F8\CharacterIris.h" />
     <ClInclude Include="..\Clowns%27 F8\Defs.h" />
     <ClInclude Include="..\Clowns%27 F8\Enemy.h" />
     <ClInclude Include="..\Clowns%27 F8\Entity.h" />
@@ -167,6 +168,7 @@
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Bulldog.cpp" />
+    <ClCompile Include="CharacterIris.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Entity.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Log.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleEntityManager.cpp" />
