--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <ClInclude Include="..\Clowns%27 F8\Animation.h" />
     <ClInclude Include="..\Clowns%27 F8\Application.h" />
+    <ClInclude Include="..\Clowns%27 F8\Boneyman.h" />
     <ClInclude Include="Hotdog.h" />
     <ClInclude Include="..\Clowns%27 F8\Character.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterIris.h" />
@@ -168,6 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Boneyman.cpp" />
     <ClCompile Include="Hotdog.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModulePathfinding.cpp" />
     <ClCompile Include="CharacterIris.cpp" />
