--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{22D3C7EC-C963-4AD1-8C4A-8FCD551EE143}</ProjectGuid>
     <RootNamespace>ClownsF8</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>Clowns' F8</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -70,10 +70,7 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <ExecutablePath>C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_ttf\libx86;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_mixer\libx86;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_image\libx86;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL\libx86;$(ExecutablePath)</ExecutablePath>
-    <IncludePath>C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_ttf\include;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_mixer\include;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_image\include;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL\include;$(IncludePath)</IncludePath>
-  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ExecutablePath>C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_ttf\libx86;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_mixer\libx86;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_image\libx86;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL\libx86;$(ExecutablePath)</ExecutablePath>
     <IncludePath>C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_ttf\include;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_mixer\include;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL_image\include;C:\Users\Martí\Desktop\Clowns-F8\Clowns%27 F8\SDL\include;$(IncludePath)</IncludePath>
